--- a/faq.html
+++ b/faq.html
@@ -120,25 +120,25 @@
                         а
                         потом — заселенные дома.
                     </p>
-                    <ul>
+                    <ul class="price-tabs">
                         <div class="nav nav-tabs" id="nav-tab" role="tablist">
                             <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home"
-                               role="tab" aria-controls="nav-home" aria-selected="true">Home</a>
+                               role="tab" aria-controls="nav-home" aria-selected="true">Бюджет</a>
                             <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile"
-                               role="tab" aria-controls="nav-profile" aria-selected="false">Profile</a>
+                               role="tab" aria-controls="nav-profile" aria-selected="false">Стандарт</a>
                             <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact"
-                               role="tab" aria-controls="nav-contact" aria-selected="false">Contact</a>
+                               role="tab" aria-controls="nav-contact" aria-selected="false">ВИП</a>
                         </div>
                     </ul>
                     <div class="tab-content" id="nav-tabContent">
                         <div class="tab-pane fade show active" id="nav-home" role="tabpanel"
                              aria-labelledby="nav-home-tab">
-                            <table class="table table-hover .table-responsive-sm">
+                            <table class="table table-hover table-responsive-sm price-table">
                                 <thead>
-                                <th scope="col"></th>
-                                <th scope="col">без спецсредств и оружия</th>
-                                <th scope="col">спецстредства без оружия</th>
-                                <th scope="col">спецсредства и оружие</th>
+                                <th scope="col">График</th>
+                                <th scope="col">Без спецсредств и оружия</th>
+                                <th scope="col">Спецстредства без оружия</th>
+                                <th scope="col">Спецсредства и оружие</th>
                                 </thead>
                                 <tbody>
                                 <tr>
@@ -173,26 +173,93 @@
                                 </tr>
                                 </tbody>
                             </table>
+                            <p>**Для тарифа "Бюджет" на объект выставляются охранники с твердым знанием тактико-специальной подготовки, без нареканий к физической подготовке и телосложению. Возраст до 60 лет. Все сотрудники имеют базовые навыки обращения со спецсредствами, техническими средствами. Имеют четкое представление о действиях в случае возникновения внештатных ситуаций.</p>
                         </div>
                         <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
-                            Nulla est ullamco ut irure incididunt nulla Lorem Lorem minim irure officia enim
-                            reprehenderit. Magna duis labore cillum sint adipisicing exercitation ipsum. Nostrud ut anim
-                            non exercitation velit laboris fugiat cupidatat. Commodo esse dolore fugiat sint velit
-                            ullamco magna consequat voluptate minim amet aliquip ipsum aute laboris nisi. Labore labore
-                            veniam irure irure ipsum pariatur mollit magna in cupidatat dolore magna irure esse tempor
-                            ad mollit. Dolore commodo nulla minim amet ipsum officia consectetur amet ullamco voluptate
-                            nisi commodo ea sit eu.
+                            <table class="table table-hover table-responsive-sm price-table">
+                                <thead>
+                                <th scope="col">График</th>
+                                <th scope="col">Без спецсредств и оружия</th>
+                                <th scope="col">Спецстредства без оружия</th>
+                                <th scope="col">Спецсредства и оружие</th>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td>5/2</td>
+                                    <td>125</td>
+                                    <td>140</td>
+                                    <td>180</td>
+                                </tr>
+                                <tr>
+                                    <td>день/ночь</td>
+                                    <td>140</td>
+                                    <td>150</td>
+                                    <td>200</td>
+                                </tr>
+                                <tr>
+                                    <td>24 часа</td>
+                                    <td>150</td>
+                                    <td>160</td>
+                                    <td>210</td>
+                                </tr>
+                                <tr>
+                                    <td>сменный</td>
+                                    <td>150</td>
+                                    <td>170</td>
+                                    <td>230</td>
+                                </tr>
+                                <tr>
+                                    <td>вахта</td>
+                                    <td>180</td>
+                                    <td>190</td>
+                                    <td>250</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                            <p>**Для тарифа "Бюджет" на объект выставляются охранники с твердым знанием тактико-специальной подготовки, без нареканий к физической подготовке и телосложению. Возраст до 60 лет. Все сотрудники имеют базовые навыки обращения со спецсредствами, техническими средствами. Имеют четкое представление о действиях в случае возникновения внештатных ситуаций.</p>
                         </div>
                         <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
-                            Sint sit mollit irure quis est nostrud cillum consequat Lorem esse do quis dolor esse fugiat
-                            sunt do. Eu ex commodo veniam Lorem aliquip laborum occaecat qui Lorem esse mollit dolore
-                            anim cupidatat. Deserunt officia id Lorem nostrud aute id commodo elit eiusmod enim irure
-                            amet eiusmod qui reprehenderit nostrud tempor. Fugiat ipsum excepteur in aliqua non et quis
-                            aliquip ad irure in labore cillum elit enim. Consequat aliquip incididunt ipsum et minim
-                            laborum laborum laborum et cillum labore. Deserunt adipisicing cillum id nulla minim nostrud
-                            labore eiusmod et amet. Laboris consequat consequat commodo non ut non aliquip reprehenderit
-                            nulla anim occaecat. Sunt sit ullamco reprehenderit irure ea ullamco Lorem aute nostrud
-                            magna.
+                            <table class="table table-hover table-responsive-sm price-table">
+                                <thead>
+                                <th scope="col">График</th>
+                                <th scope="col">Без спецсредств и оружия</th>
+                                <th scope="col">Спецстредства без оружия</th>
+                                <th scope="col">Спецсредства и оружие</th>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td>5/2</td>
+                                    <td>125</td>
+                                    <td>140</td>
+                                    <td>180</td>
+                                </tr>
+                                <tr>
+                                    <td>день/ночь</td>
+                                    <td>140</td>
+                                    <td>150</td>
+                                    <td>200</td>
+                                </tr>
+                                <tr>
+                                    <td>24 часа</td>
+                                    <td>150</td>
+                                    <td>160</td>
+                                    <td>210</td>
+                                </tr>
+                                <tr>
+                                    <td>сменный</td>
+                                    <td>150</td>
+                                    <td>170</td>
+                                    <td>230</td>
+                                </tr>
+                                <tr>
+                                    <td>вахта</td>
+                                    <td>180</td>
+                                    <td>190</td>
+                                    <td>250</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                            <p>**Для тарифа "Бюджет" на объект выставляются охранники с твердым знанием тактико-специальной подготовки, без нареканий к физической подготовке и телосложению. Возраст до 60 лет. Все сотрудники имеют базовые навыки обращения со спецсредствами, техническими средствами. Имеют четкое представление о действиях в случае возникновения внештатных ситуаций.</p>
                         </div>
                     </div>
                 </main>
