--- a/faq.html
+++ b/faq.html
@@ -120,146 +120,164 @@
                         а
                         потом — заселенные дома.
                     </p>
-                    <ul class="price-tabs">
+                    <div class="price-tabs">
                         <div class="nav nav-tabs" id="nav-tab" role="tablist">
                             <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home"
                                role="tab" aria-controls="nav-home" aria-selected="true">Бюджет</a>
                             <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile"
                                role="tab" aria-controls="nav-profile" aria-selected="false">Стандарт</a>
                             <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact"
-                               role="tab" aria-controls="nav-contact" aria-selected="false">ВИП</a>
+                               role="tab" aria-controls="nav-contact" aria-selected="false">Премиум</a>
                         </div>
-                    </ul>
+                    </div>
                     <div class="tab-content" id="nav-tabContent">
                         <div class="tab-pane fade show active" id="nav-home" role="tabpanel"
                              aria-labelledby="nav-home-tab">
                             <table class="table table-hover table-responsive-sm price-table">
                                 <thead>
-                                <th scope="col">График</th>
-                                <th scope="col">Без спецсредств и оружия</th>
-                                <th scope="col">Спецстредства без оружия</th>
-                                <th scope="col">Спецсредства и оружие</th>
+                                <tr>
+                                    <th scope="col">График</th>
+                                    <th scope="col">Без спецсредств и оружия</th>
+                                    <th scope="col">Спецстредства без оружия</th>
+                                    <th scope="col">Спецсредства и оружие</th>
+                                </tr>
                                 </thead>
                                 <tbody>
                                 <tr>
                                     <td>5/2</td>
-                                    <td>125</td>
-                                    <td>140</td>
-                                    <td>180</td>
+                                    <td>125 ₽/час</td>
+                                    <td>140 ₽/час</td>
+                                    <td>180 ₽/час</td>
                                 </tr>
                                 <tr>
                                     <td>день/ночь</td>
-                                    <td>140</td>
-                                    <td>150</td>
-                                    <td>200</td>
+                                    <td>140 ₽/час</td>
+                                    <td>150 ₽/час</td>
+                                    <td>200 ₽/час</td>
                                 </tr>
                                 <tr>
                                     <td>24 часа</td>
-                                    <td>150</td>
-                                    <td>160</td>
-                                    <td>210</td>
+                                    <td>150 ₽/час</td>
+                                    <td>160 ₽/час</td>
+                                    <td>210 ₽/час</td>
                                 </tr>
                                 <tr>
                                     <td>сменный</td>
-                                    <td>150</td>
-                                    <td>170</td>
-                                    <td>230</td>
+                                    <td>150 ₽/час</td>
+                                    <td>170 ₽/час</td>
+                                    <td>230 ₽/час</td>
                                 </tr>
                                 <tr>
                                     <td>вахта</td>
-                                    <td>180</td>
-                                    <td>190</td>
-                                    <td>250</td>
+                                    <td>180 ₽/час</td>
+                                    <td>190 ₽/час</td>
+                                    <td>250 ₽/час</td>
                                 </tr>
                                 </tbody>
                             </table>
-                            <p>**Для тарифа "Бюджет" на объект выставляются охранники с твердым знанием тактико-специальной подготовки, без нареканий к физической подготовке и телосложению. Возраст до 60 лет. Все сотрудники имеют базовые навыки обращения со спецсредствами, техническими средствами. Имеют четкое представление о действиях в случае возникновения внештатных ситуаций.</p>
+                            <p class="price-paragraph">* Указана минимальная стоимость работы одного охранника за один час.</p>
+                            <p class="price-paragraph">**Для тарифа "Бюджет" на объект выставляются охранники с твердым знанием
+                            тактико-специальной подготовки, без нареканий к физической подготовке и телосложению.
+                            Возраст до 60 лет. Все сотрудники лицензированы имеют базовые навыки обращения со спецсредствами,
+                            техническими средствами. Имеют четкое представление о действиях в случае возникновения
+                            внештатных ситуаций. Опыт работы в охране от 1 года.</p>
+
                         </div>
                         <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
                             <table class="table table-hover table-responsive-sm price-table">
                                 <thead>
-                                <th scope="col">График</th>
-                                <th scope="col">Без спецсредств и оружия</th>
-                                <th scope="col">Спецстредства без оружия</th>
-                                <th scope="col">Спецсредства и оружие</th>
+                                <tr>
+                                    <th scope="col">График</th>
+                                    <th scope="col">Без спецсредств и оружия</th>
+                                    <th scope="col">Спецстредства без оружия</th>
+                                    <th scope="col">Спецсредства и оружие</th>
+                                </tr>
                                 </thead>
                                 <tbody>
                                 <tr>
                                     <td>5/2</td>
-                                    <td>125</td>
-                                    <td>140</td>
-                                    <td>180</td>
+                                    <td>125 ₽/час</td>
+                                    <td>140 ₽/час</td>
+                                    <td>180 ₽/час</td>
                                 </tr>
                                 <tr>
                                     <td>день/ночь</td>
-                                    <td>140</td>
-                                    <td>150</td>
-                                    <td>200</td>
+                                    <td>140 ₽/час</td>
+                                    <td>150 ₽/час</td>
+                                    <td>200 ₽/час</td>
                                 </tr>
                                 <tr>
                                     <td>24 часа</td>
-                                    <td>150</td>
-                                    <td>160</td>
-                                    <td>210</td>
+                                    <td>150 ₽/час</td>
+                                    <td>160 ₽/час</td>
+                                    <td>210 ₽/час</td>
                                 </tr>
                                 <tr>
                                     <td>сменный</td>
-                                    <td>150</td>
-                                    <td>170</td>
-                                    <td>230</td>
+                                    <td>150 ₽/час</td>
+                                    <td>170 ₽/час</td>
+                                    <td>230 ₽/час</td>
                                 </tr>
                                 <tr>
                                     <td>вахта</td>
-                                    <td>180</td>
-                                    <td>190</td>
-                                    <td>250</td>
+                                    <td>180 ₽/час</td>
+                                    <td>190 ₽/час</td>
+                                    <td>250 ₽/час</td>
                                 </tr>
                                 </tbody>
                             </table>
-                            <p>**Для тарифа "Бюджет" на объект выставляются охранники с твердым знанием тактико-специальной подготовки, без нареканий к физической подготовке и телосложению. Возраст до 60 лет. Все сотрудники имеют базовые навыки обращения со спецсредствами, техническими средствами. Имеют четкое представление о действиях в случае возникновения внештатных ситуаций.</p>
+                            <p class="price-paragraph">* Указана минимальная стоимость работы одного охранника за один час.</p>
+                            <p class="price-paragraph">**По тарифу "Стандарт" на объект выставляются охранники нормального телесложения и роста возрастом до 50 лет и стажем работы в охране от 3х лет. Каждый сотрудник имеет хорошие
+                                знания тактико-специальной подготовки, регулярно проходит тренировки по отработке действий во внештатных ситуациях. Охранники данной категории имеют опыт ведения документации на посту,
+                                знакомы с техническими средствами охраны, имеют начальные навыки управления ПК.</p>
                         </div>
                         <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
                             <table class="table table-hover table-responsive-sm price-table">
                                 <thead>
-                                <th scope="col">График</th>
-                                <th scope="col">Без спецсредств и оружия</th>
-                                <th scope="col">Спецстредства без оружия</th>
-                                <th scope="col">Спецсредства и оружие</th>
+                                <tr>
+                                    <th scope="col">График</th>
+                                    <th scope="col">Без спецсредств и оружия</th>
+                                    <th scope="col">Спецстредства без оружия</th>
+                                    <th scope="col">Спецсредства и оружие</th>
+                                </tr>
                                 </thead>
                                 <tbody>
                                 <tr>
                                     <td>5/2</td>
-                                    <td>125</td>
-                                    <td>140</td>
-                                    <td>180</td>
+                                    <td>125 ₽/час</td>
+                                    <td>140 ₽/час</td>
+                                    <td>180 ₽/час</td>
                                 </tr>
                                 <tr>
                                     <td>день/ночь</td>
-                                    <td>140</td>
-                                    <td>150</td>
-                                    <td>200</td>
+                                    <td>140 ₽/час</td>
+                                    <td>150 ₽/час</td>
+                                    <td>200 ₽/час</td>
                                 </tr>
                                 <tr>
                                     <td>24 часа</td>
-                                    <td>150</td>
-                                    <td>160</td>
-                                    <td>210</td>
+                                    <td>150 ₽/час</td>
+                                    <td>160 ₽/час</td>
+                                    <td>210 ₽/час</td>
                                 </tr>
                                 <tr>
                                     <td>сменный</td>
-                                    <td>150</td>
-                                    <td>170</td>
-                                    <td>230</td>
+                                    <td>150 ₽/час</td>
+                                    <td>170 ₽/час</td>
+                                    <td>230 ₽/час</td>
                                 </tr>
                                 <tr>
                                     <td>вахта</td>
-                                    <td>180</td>
-                                    <td>190</td>
-                                    <td>250</td>
+                                    <td>180 ₽/час</td>
+                                    <td>190 ₽/час</td>
+                                    <td>250 ₽/час</td>
                                 </tr>
                                 </tbody>
                             </table>
-                            <p>**Для тарифа "Бюджет" на объект выставляются охранники с твердым знанием тактико-специальной подготовки, без нареканий к физической подготовке и телосложению. Возраст до 60 лет. Все сотрудники имеют базовые навыки обращения со спецсредствами, техническими средствами. Имеют четкое представление о действиях в случае возникновения внештатных ситуаций.</p>
+                            <p class="price-paragraph">* Указана минимальная стоимость работы одного охранника за один час.</p>
+                            <p class="price-paragraph">** Тарифа "Премиум" предлагает Вам охранников в представительного вида отличной физической форме возрастом до 45 лет и стажем работы в охране от 5 лет.
+                                Все сотрудники данной категории имеют отличные знания тактико-специальной подготовке, готовы к действиям в чрезвычайных ситуациях, знают регламент применения спецсредств и оружия.
+                                Практическая и теоретическая подготовка охранников данной группы позволяет им работать с постовой документацией, ПК и системами охраны, такими как: СКУД, видеомониторинг, различные сигнализации</p>
                         </div>
                     </div>
                 </main>
