--- a/faq.html
+++ b/faq.html
@@ -175,12 +175,15 @@
                                 </tr>
                                 </tbody>
                             </table>
-                            <p class="price-paragraph">* Указана минимальная стоимость работы одного охранника за один час.</p>
-                            <p class="price-paragraph">**Для тарифа "Бюджет" на объект выставляются охранники с твердым знанием
-                            тактико-специальной подготовки, без нареканий к физической подготовке и телосложению.
-                            Возраст до 60 лет. Все сотрудники лицензированы имеют базовые навыки обращения со спецсредствами,
-                            техническими средствами. Имеют четкое представление о действиях в случае возникновения
-                            внештатных ситуаций. Опыт работы в охране от 1 года.</p>
+                            <p class="price-paragraph">* Указана минимальная стоимость работы одного охранника за один
+                                час.</p>
+                            <p class="price-paragraph">**Для тарифа "Бюджет" на объект выставляются охранники с твердым
+                                знанием
+                                тактико-специальной подготовки, без нареканий к физической подготовке и телосложению.
+                                Возраст до 60 лет. Все сотрудники лицензированы имеют базовые навыки обращения со
+                                спецсредствами,
+                                техническими средствами. Имеют четкое представление о действиях в случае возникновения
+                                внештатных ситуаций. Опыт работы в охране от 1 года.</p>
 
                         </div>
                         <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
@@ -226,9 +229,14 @@
                                 </tr>
                                 </tbody>
                             </table>
-                            <p class="price-paragraph">* Указана минимальная стоимость работы одного охранника за один час.</p>
-                            <p class="price-paragraph">**По тарифу "Стандарт" на объект выставляются охранники нормального телесложения и роста возрастом до 50 лет и стажем работы в охране от 3х лет. Каждый сотрудник имеет хорошие
-                                знания тактико-специальной подготовки, регулярно проходит тренировки по отработке действий во внештатных ситуациях. Охранники данной категории имеют опыт ведения документации на посту,
+                            <p class="price-paragraph">* Указана минимальная стоимость работы одного охранника за один
+                                час.</p>
+                            <p class="price-paragraph">**По тарифу "Стандарт" на объект выставляются охранники
+                                нормального телесложения и роста возрастом до 50 лет и стажем работы в охране от 3х лет.
+                                Каждый сотрудник имеет хорошие
+                                знания тактико-специальной подготовки, регулярно проходит тренировки по отработке
+                                действий во внештатных ситуациях. Охранники данной категории имеют опыт ведения
+                                документации на посту,
                                 знакомы с техническими средствами охраны, имеют начальные навыки управления ПК.</p>
                         </div>
                         <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
@@ -274,12 +282,24 @@
                                 </tr>
                                 </tbody>
                             </table>
-                            <p class="price-paragraph">* Указана минимальная стоимость работы одного охранника за один час.</p>
-                            <p class="price-paragraph">** Тарифа "Премиум" предлагает Вам охранников в представительного вида отличной физической форме возрастом до 45 лет и стажем работы в охране от 5 лет.
-                                Все сотрудники данной категории имеют отличные знания тактико-специальной подготовке, готовы к действиям в чрезвычайных ситуациях, знают регламент применения спецсредств и оружия.
-                                Практическая и теоретическая подготовка охранников данной группы позволяет им работать с постовой документацией, ПК и системами охраны, такими как: СКУД, видеомониторинг, различные сигнализации</p>
+                            <p class="price-paragraph">* Указана минимальная стоимость работы одного охранника за один
+                                час.</p>
+                            <p class="price-paragraph">** Тарифа "Премиум" предлагает Вам охранников в представительного
+                                вида отличной физической форме возрастом до 45 лет и стажем работы в охране от 5 лет.
+                                Все сотрудники данной категории имеют отличные знания тактико-специальной подготовке,
+                                готовы к действиям в чрезвычайных ситуациях, знают регламент применения спецсредств и
+                                оружия.
+                                Практическая и теоретическая подготовка охранников данной группы позволяет им работать с
+                                постовой документацией, ПК и системами охраны, такими как: СКУД, видеомониторинг,
+                                различные сигнализации</p>
                         </div>
                     </div>
+                    <select class="js-example-basic-single" name="object-type">
+                        <option value="1">Предприятие</option>
+                        <option value="2">Частный объект</option>
+                        <option value="3">Коттеджный поселок</option>
+                        <option value="3">Медицинское учреждение</option>
+                    </select>
                 </main>
             </div>
         </div>
@@ -442,5 +462,16 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/knockout/2.3.0/knockout-min.js"></script>
 <script src="./js/scripts.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('.js-example-basic-single').select2({
+            placeholder: "Не выбрано",
+            minimumResultsForSearch: 1 / 0,
+            width: 'resolve',
+            theme: 'classic'
+        })
+    });
+</script>
+
 </body>
 </html>
