Smooth scroll + главное меню со скроллом для главной

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <li class="header-nav-items__item"><a href="#" class="header-nav-items__link">Благодарности</a></li>
                     <li class="header-nav-items__item"><a href="#" class="header-nav-items__link">Новости</a></li>
                     <li class="header-nav-items__item"><a href="#" class="header-nav-items__link">Клиенты</a></li>
-                    <li class="header-nav-items__item"><a href="#" class="header-nav-items__link">Контакты</a></li>
+                    <li class="header-nav-items__item"><a href="#footer" class="header-nav-items__link">Контакты</a></li>
                 </ul>
             </nav>
             <a href="#menu" class="hamburger hamburger--emphatic">
@@ -609,7 +609,7 @@
         </section>
     </main>
     <div class="page__footer">
-        <footer class="footer">
+        <footer class="footer" id="footer">
             <div class="wrapper">
                 <div class="row">
                     <div class="footer__contacts">
