--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
                                     <div class="serviceCard__title--bold">охрана</div>
                                 </div>
                                 <div class="serviceCard__linksBlock">
-                                    <a href="#" class="serviceCard__link">Охрана производства</a>
-                                    <a href="#" class="serviceCard__link">Охрана складов</a>
-                                    <a href="#" class="serviceCard__link">Охрана АЗС</a>
-                                    <a href="#" class="serviceCard__link">Охрана строек</a>
+                                    <span data-link="aHR0cDovL2ZvcnBvc3Qtc2V2ZXIucnUvdXNsdWdpLw==" href="#" class="serviceCard__link">Охрана производства</span>
+                                    <span data-link="aHR0cDovL2ZvcnBvc3Qtc2V2ZXIucnUvdXNsdWdpLw==" href="#" class="serviceCard__link">Охрана складов</span>
+                                    <span data-link="aHR0cDovL2ZvcnBvc3Qtc2V2ZXIucnUvdXNsdWdpLw==" href="#" class="serviceCard__link">Охрана АЗС</span>
+                                    <span data-link="aHR0cDovL2ZvcnBvc3Qtc2V2ZXIucnUvdXNsdWdpLw==" href="#" class="serviceCard__link">Охрана строек</span>
                                 </div>
                                 <div class="animatedFrame serviceCard__frame">
                                     <div class="animatedFrame__container">
